adding style and media query for navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       data-bs-theme="dark"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand title" href="#">
           <img
             src="/ressources/icons/music.svg"
             alt=""
