add article, flexbox and mobile first integration

--- a/index.html
+++ b/index.html
@@ -37,5 +37,61 @@
       </div>
     </nav>
   </header>
-  <body></body>
+
+  <body>
+    <div class="container-md">
+      <h1 class="text-center fw-bold">Lorem ipsum</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ad deserunt
+        illum ipsam omnis quaerat amet autem laboriosam ipsum veniam dolor
+        error, at aliquid molestias voluptates beatae temporibus mollitia.
+        Officia? Eum ex expedita illum architecto. Sint laboriosam
+        necessitatibus quia error voluptatem nesciunt aliquam deleniti natus
+        esse sit, dolorum ullam iusto quidem, ad eligendi aliquid quod
+        perferendis qui molestias et recusandae!
+      </p>
+    </div>
+
+    <article class="article1">
+      <h1 class="text-center fw-bold title">Lorem ipsum</h1>
+      <div class="icons">
+        <div class="iconContainer">
+          <img src="/ressources/icons/disque.svg" alt="" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+            facilis doloremque exercitationem minus repellendus laudantium eius,
+            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
+            Asperiores ab nisi recusandae autem.
+          </p>
+        </div>
+        <div class="iconContainer">
+          <img src="/ressources/icons/fichierMusic.svg" alt="" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+            facilis doloremque exercitationem minus repellendus laudantium eius,
+            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
+            Asperiores ab nisi recusandae autem.
+          </p>
+        </div>
+        <div class="iconContainer">
+          <img src="/ressources/icons/lecteur.svg" alt="" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+            facilis doloremque exercitationem minus repellendus laudantium eius,
+            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
+            Asperiores ab nisi recusandae autem.
+          </p>
+        </div>
+        <div class="iconContainer">
+          <img src="/ressources/icons/music.svg" alt="" />
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
+            facilis doloremque exercitationem minus repellendus laudantium eius,
+            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
+            Asperiores ab nisi recusandae autem.
+          </p>
+        </div>
+      </div>
+    </article>
+  </body>
 </html>
