--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </p>
     </div>
 
+    <!-- TODO : Center icons for better design ! -->
     <article class="article1">
       <h1 class="text-center fw-bold title">Lorem ipsum</h1>
       <div class="icons">
@@ -93,5 +94,18 @@
         </div>
       </div>
     </article>
+
+
+<footer class="container-fluid">
+
+  <div class="text-center mt-2">
+    <h3>Nous contacter </h3>
+    <p>06 06 06 06 06</p>
+    <p>mail@example.com</p>
+    <p>12 rue de l'invention, Paris, 75011</p>
+  </div>
+        <p class="copyright text-end">Thomas Zadikian @ 2023</p>
+      </div>
+</footer>
   </body>
 </html>
