improve user interface

--- a/index.html
+++ b/index.html
@@ -39,17 +39,19 @@
   </header>
 
   <body>
-    <div class="container-md">
-      <h1 class="text-center fw-bold">Lorem ipsum</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ad deserunt
-        illum ipsam omnis quaerat amet autem laboriosam ipsum veniam dolor
-        error, at aliquid molestias voluptates beatae temporibus mollitia.
-        Officia? Eum ex expedita illum architecto. Sint laboriosam
-        necessitatibus quia error voluptatem nesciunt aliquam deleniti natus
-        esse sit, dolorum ullam iusto quidem, ad eligendi aliquid quod
-        perferendis qui molestias et recusandae!
-      </p>
+    <div class="headerIMG">
+      <div class="container-md presentationContainer">
+        <h1 class="text-center fw-bold">Lorem ipsum</h1>
+        <p class="mt-3">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ad deserunt
+          illum ipsam omnis quaerat amet autem laboriosam ipsum veniam dolor
+          error, at aliquid molestias voluptates beatae temporibus mollitia.
+          Officia? Eum ex expedita illum architecto. Sint laboriosam
+          necessitatibus quia error voluptatem nesciunt aliquam deleniti natus
+          esse sit, dolorum ullam iusto quidem, ad eligendi aliquid quod
+          perferendis qui molestias et recusandae!
+        </p>
+      </div>
     </div>
 
     <!-- TODO : Center icons for better design ! -->
