--- a/index.html
+++ b/index.html
@@ -8,53 +8,16 @@
     <title>Music'All</title>
   </head>
   <header>
-    <nav
-      class="navbar bg-dark navbar-expand-lg bg-body-tertiary"
-      data-bs-theme="dark"
-    >
-      <div class="container">
-        <a class="navbar-brand title" href="#">
-          <img
-            src="/ressources/icons/music.svg"
-            alt=""
-            width="30"
-            height="24"
-            class="d-inline-block align-text-top"
-          />
-          Music'All
-        </a>
-        <ul class="navbar-nav navbar-brand align-item">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Evénementiels</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <body>
     <div class="headerIMG">
-      <div class="container-md presentationContainer">
-        <h1 class="text-center fw-bold">Lorem ipsum</h1>
-        <p class="mt-3">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ad deserunt
-          illum ipsam omnis quaerat amet autem laboriosam ipsum veniam dolor
-          error, at aliquid molestias voluptates beatae temporibus mollitia.
-          Officia? Eum ex expedita illum architecto. Sint laboriosam
-          necessitatibus quia error voluptatem nesciunt aliquam deleniti natus
-          esse sit, dolorum ullam iusto quidem, ad eligendi aliquid quod
-          perferendis qui molestias et recusandae!
-        </p>
+      <div class="container-fluid presentationContainer">
+        <h1 class="text-center fw-bold">Music'All</h1>
+        <button type="button" class="btn">Evénements</button>
+        <button type="button" class="btn">Contact</button>
       </div>
     </div>
-
-    <!-- TODO : Center icons for better design ! -->
+  </header>
+  
+  <body> 
     <article class="article1">
       <h1 class="text-center fw-bold title">Lorem ipsum</h1>
       <div class="icons">
@@ -106,7 +69,7 @@
     <p>mail@example.com</p>
     <p>12 rue de l'invention, Paris, 75011</p>
   </div>
-        <p class="copyright text-end">Thomas Zadikian @ 2023</p>
+        <p class="text-end">Thomas Zadikian @ 2023</p>
       </div>
 </footer>
   </body>
