add text for index.html

--- a/index.html
+++ b/index.html
@@ -19,42 +19,30 @@
   
   <body> 
     <article class="article1">
-      <h1 class="text-center fw-bold title">Lorem ipsum</h1>
+      <h1 class="text-center fw-bold title">Notre association</h1>
       <div class="icons">
         <div class="iconContainer">
           <img src="/ressources/icons/disque.svg" alt="" />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-            facilis doloremque exercitationem minus repellendus laudantium eius,
-            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
-            Asperiores ab nisi recusandae autem.
+            Bienvenue sur notre site associatif de musique ! Notre objectif est de rassembler des passionnés de musique de toutes les genres et de tous les horizons afin de partager notre amour pour cet art universel.
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/fichierMusic.svg" alt="" />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-            facilis doloremque exercitationem minus repellendus laudantium eius,
-            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
-            Asperiores ab nisi recusandae autem.
+            Notre site offre un visuel sur les événements à venir pour vous aider à découvrir de nouveaux artistes, participer à des événements et à connecter avec d'autres membres de la communauté musicale. Nous avons également une section de contact pour que vous puissiez nous poser toutes les questions que vous voulez. 
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/lecteur.svg" alt="" />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-            facilis doloremque exercitationem minus repellendus laudantium eius,
-            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
-            Asperiores ab nisi recusandae autem.
+            En tant que site associatif, nous encourageons la participation active de nos membres pour aider à façonner le contenu et la direction de la communauté. Nous sommes toujours ouverts aux nouvelles idées et suggestions, alors n'hésitez pas à nous contacter si vous avez des commentaires ou des questions.
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/music.svg" alt="" />
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit
-            facilis doloremque exercitationem minus repellendus laudantium eius,
-            rerum, porro saepe, deleniti fugiat iusto ab quam accusamus.
-            Asperiores ab nisi recusandae autem.
+            Rejoignez-nous pour partager votre passion pour la musique et découvrir tout ce que notre site associatif a à offrir !
           </p>
         </div>
       </div>
