create evenement branch

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link href="/SCSS/style.css" rel="stylesheet" />
     <title>Music'All</title>
   </head>
+  <body> 
   <header>
     <div class="headerIMG">
       <div class="container-fluid presentationContainer">
         <h1 class="text-center fw-bold">Music'All</h1>
-        <button type="button" class="btn">Evénements</button>
-        <button type="button" class="btn">Contact</button>
+        <a href="/pages/evenements.html"><button type="button" class="btn"> Evénements</button></a>
+         <a href="/pages/contact.html"> <button type="button" class="btn">Contact</button></a>
       </div>
     </div>
   </header>
   
-  <body> 
-    <article class="article1">
+    <article class="article">
       <h1 class="text-center fw-bold title">Notre association</h1>
       <div class="icons">
         <div class="iconContainer">
