fix footer issues

--- a/index.html
+++ b/index.html
@@ -7,58 +7,71 @@
     <link href="/SCSS/style.css" rel="stylesheet" />
     <title>Music'All</title>
   </head>
-  <body> 
-  <header>
-    <div class="headerIMG">
-      <div class="container-fluid presentationContainer">
-        <h1 class="text-center fw-bold">Music'All</h1>
-        <a href="/pages/evenements.html"><button type="button" class="btn"> Evénements</button></a>
-         <a href="/pages/contact.html"> <button type="button" class="btn">Contact</button></a>
+  <body>
+    <header>
+      <div class="headerIMG">
+        <div class="container-fluid presentationContainer">
+          <h1 class="text-center fw-bold">Music'All</h1>
+          <a href="/pages/evenements.html"
+            ><button type="button" class="btn">Evénements</button></a
+          >
+          <a href="/pages/contact.html">
+            <button type="button" class="btn">Contact</button></a
+          >
+        </div>
       </div>
-    </div>
-  </header>
-  
+    </header>
+
     <article class="article">
       <h1 class="text-center fw-bold title">Notre association</h1>
       <div class="icons">
         <div class="iconContainer">
           <img src="/ressources/icons/disque.svg" alt="" />
           <p>
-            Bienvenue sur notre site associatif de musique ! Notre objectif est de rassembler des passionnés de musique de toutes les genres et de tous les horizons afin de partager notre amour pour cet art universel.
+            Bienvenue sur notre site associatif de musique ! Notre objectif est
+            de rassembler des passionnés de musique de toutes les genres et de
+            tous les horizons afin de partager notre amour pour cet art
+            universel.
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/fichierMusic.svg" alt="" />
           <p>
-            Notre site offre un visuel sur les événements à venir pour vous aider à découvrir de nouveaux artistes, participer à des événements et à connecter avec d'autres membres de la communauté musicale. Nous avons également une section de contact pour que vous puissiez nous poser toutes les questions que vous voulez. 
+            Notre site offre un visuel sur les événements à venir pour vous
+            aider à découvrir de nouveaux artistes, participer à des événements
+            et à connecter avec d'autres membres de la communauté musicale. Nous
+            avons également une section de contact pour que vous puissiez nous
+            poser toutes les questions que vous voulez.
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/lecteur.svg" alt="" />
           <p>
-            En tant que site associatif, nous encourageons la participation active de nos membres pour aider à façonner le contenu et la direction de la communauté. Nous sommes toujours ouverts aux nouvelles idées et suggestions, alors n'hésitez pas à nous contacter si vous avez des commentaires ou des questions.
+            En tant que site associatif, nous encourageons la participation
+            active de nos membres pour aider à façonner le contenu et la
+            direction de la communauté. Nous sommes toujours ouverts aux
+            nouvelles idées et suggestions, alors n'hésitez pas à nous contacter
+            si vous avez des commentaires ou des questions.
           </p>
         </div>
         <div class="iconContainer">
           <img src="/ressources/icons/music.svg" alt="" />
           <p>
-            Rejoignez-nous pour partager votre passion pour la musique et découvrir tout ce que notre site associatif a à offrir !
+            Rejoignez-nous pour partager votre passion pour la musique et
+            découvrir tout ce que notre site associatif a à offrir !
           </p>
         </div>
       </div>
     </article>
 
-
-<footer class="container-fluid">
-
-  <div class="text-center mt-2">
-    <h3>Nous contacter </h3>
-    <p>06 06 06 06 06</p>
-    <p>mail@example.com</p>
-    <p>12 rue de l'invention, Paris, 75011</p>
-  </div>
-        <p class="text-end">Thomas Zadikian @ 2023</p>
+    <footer class="container-fluid">
+      <div class="text-center mt-2">
+        <h3>Nous contacter</h3>
+        <p>06 06 06 06 06</p>
+        <p>mail@example.com</p>
+        <p>12 rue de l'invention, Paris, 75011</p>
       </div>
-</footer>
+      <p class="text-end">Thomas Zadikian @ 2023</p>
+    </footer>
   </body>
 </html>
