--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="card text-bg-dark mb-2">
-          <div class="card-header">EVENT_ONE</div>
+          <div class="card-header">EVENT_TWO</div>
           <div class="card-body">
             <h5 class="card-title">EVENT_SUBTITLE</h5>
             <p class="card-text">EVENT_CONTENT</p>
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="card text-bg-dark mb-2">
-          <div class="card-header">EVENT_ONE</div>
+          <div class="card-header">EVENT_THREE</div>
           <div class="card-body">
             <h5 class="card-title">EVENT_SUBTITLE</h5>
             <p class="card-text">EVENT_CONTENT</p>
@@ -67,8 +67,8 @@
         </div>
       </div>
     </article>
-    <footer class="container">
-      <div class="text-center mt-2">
+    <footer class="container-fluid">
+      <div class="text-center mt-3 mb-3">
         <h3>Nous contacter</h3>
         <p>06 06 06 06 06</p>
         <p>mail@example.com</p>
