--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -67,8 +67,9 @@
         </div>
       </div>
     </article>
+
     <footer class="container-fluid">
-      <div class="text-center mt-3 mb-3">
+      <div class="text-center mt-3">
         <h3>Nous contacter</h3>
         <p>06 06 06 06 06</p>
         <p>mail@example.com</p>
