--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -26,12 +26,30 @@
       <h1 class="text-center fw-bold title">Les événements</h1>
       <div class="container">
         <div class="card text-bg-dark mb-2">
-          <div class="card-header">EVENT_ONE</div>
+          <div class="card-header">
+            Lolapalooza<span class="ms-3 badge bg-secondary"
+              >Evenement nationale</span
+            >
+          </div>
           <div class="card-body">
-            <h5 class="card-title">EVENT_SUBTITLE</h5>
-            <p class="card-text">EVENT_CONTENT</p>
-            <a href="#" class="btn btn-primary"
-              >EVENT_LINK<img
+            <h5 class="card-title">
+              En seulement quatre éditions, la célébration parisienne du plus
+              grand festival itinérant du monde s'est imposée comme un des
+              rendez-vous estivaux incontournables de la capitale.
+            </h5>
+            <p class="card-text">
+              En 2023, le festival se tiendra pour la première fois sur trois
+              jours : Kendrick Lamar, Rosalia, Lil Nas X, Stray Kids, Kygo,
+              OneRepublic et Aya Nakamura donnent rendez-vous aux festivaliers
+              du 21 au 23 juillet 2023 pour la nouvelle édition de Lollapalooza,
+              édition qui fait la part belle au rap, genre musical le plus
+              écouté dans l'Hexagone.
+            </p>
+            <a
+              href="https://www.offi.fr/concerts/festival/lollapalooza-6563.html"
+              class="btn btn-primary"
+              target="_blank"
+              >Lien vers l'OFFI (officiel des spectacles)<img
                 src="/ressources/icons/externLink.svg"
                 alt=""
                 class="mb-1 ms-2"
@@ -40,12 +58,24 @@
           </div>
         </div>
         <div class="card text-bg-dark mb-2">
-          <div class="card-header">EVENT_TWO</div>
+          <div class="card-header">
+            Concert des <strong>"Rock'YesLife"</strong
+            ><span class="ms-3 badge bg-secondary">Evenement local</span>
+          </div>
           <div class="card-body">
-            <h5 class="card-title">EVENT_SUBTITLE</h5>
-            <p class="card-text">EVENT_CONTENT</p>
-            <a href="#" class="btn btn-primary"
-              >EVENT_LINK<img
+            <h5 class="card-title">
+              Notre petit groupe local, les "Rock'YesLife" vous proposent un
+              concert dans le parc du chateau de l'imaginaire
+            </h5>
+            <p class="card-text">
+              Créés depuis trois ans, le groupe de notre ville "Imaginarius" se
+              propulse une nouvelle fois sur la scène locale pour joueur leurs
+              titres désormais connus de nous tous : "Rock'N'Life", "Imaginarium
+              Center" et bien d'autres. Venez les voir le 02 Mars 2023, autour
+              de boissons et de vos amis !
+            </p>
+            <a href="#" class="btn btn-primary" target="_blank"
+              >Lien vers Google maps<img
                 src="/ressources/icons/externLink.svg"
                 alt=""
                 class="mb-1 ms-2"
@@ -53,12 +83,33 @@
           </div>
         </div>
         <div class="card text-bg-dark mb-2">
-          <div class="card-header">EVENT_THREE</div>
+          <div class="card-header">
+            Festival de Saint-Denis<span class="ms-3 badge bg-secondary"
+              >Evenement nationale</span
+            >
+          </div>
           <div class="card-body">
-            <h5 class="card-title">EVENT_SUBTITLE</h5>
-            <p class="card-text">EVENT_CONTENT</p>
-            <a href="#" class="btn btn-primary"
-              >EVENT_LINK<img
+            <h5 class="card-title">
+              Le Festival de Saint-Denis propose depuis 50 ans, au cœur du
+              patrimoine architectural de Saint-Denis (93), la découverte de la
+              musique classique grâce à une programmation internationale
+              présentant des œuvres majeures du répertoire ainsi que des
+              créations. Infos et résa au 01 48 13 06 07.
+            </h5>
+            <p class="card-text">
+              Le Festival de Saint-Denis organise des actions tout au long de
+              l’année pour rendre accessible sa programmation aux différents
+              publics du territoire à travers des parcours culturels, des
+              concerts et répétitions générales pour les scolaires, ou encore
+              des projets participatifs. Il présente aux côtés d’artistes de
+              renom, des jeunes talents, contribuant ainsi à accompagner les
+              nouvelles générations de musiciens, chefs ou solistes.
+            </p>
+            <a
+              href="https://www.offi.fr/concerts/festival/festival-de-saint-denis-6576.html"
+              class="btn btn-primary"
+              target="_blank"
+              >Lien vers l'OFFI (officiel des spectacles)<img
                 src="/ressources/icons/externLink.svg"
                 alt=""
                 class="mb-1 ms-2"
