finishing evenement page

--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -23,8 +23,62 @@
     </header>
 
     <article class="article">
-      <h1 class="text-center fw-bold title">Les événements</h1>
+      <h1 class="text-center fw-bold title">Les événements locaux</h1>
       <div class="container">
+        <div class="card text-bg-dark mb-2">
+          <div class="card-header">
+            Ecoute avec nous<span class="ms-3 badge bg-secondary"
+              >Evenement local</span
+            >
+            <span class="ms-1 badge bg-secondary">Hebdomadaire</span>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              Comme toutes les semaines, nous vous proposons une écoute des plus
+              grands classiques de nos adhérents
+            </h5>
+            <p class="card-text">
+              Au menu ? tout ce que vous aimer, tout ce que vous voulez faire
+              découvrir aux autres. Cette sessions hebdomadaire d'écoute et de
+              partage ne saurait se conclure sans le traditionnel goûter, offert
+              par notre association
+            </p>
+            <a href="#" class="btn btn-primary" target="_blank"
+              >M'inscrire<img
+                src="/ressources/icons/externLink.svg"
+                alt=""
+                class="mb-1 ms-2"
+            /></a>
+          </div>
+        </div>
+
+        <div class="card text-bg-dark mb-2">
+          <div class="card-header">
+            Concert des <strong>"Rock'YesLife"</strong
+            ><span class="ms-3 badge bg-secondary">Evenement local</span>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              Notre petit groupe local, les "Rock'YesLife" vous proposent un
+              concert dans le parc du chateau de l'imaginaire
+            </h5>
+            <p class="card-text">
+              Créés depuis trois ans, le groupe de notre ville "Imaginarius" se
+              propulse une nouvelle fois sur la scène locale pour joueur leurs
+              titres désormais connus de nous tous : "Rock'N'Life", "Imaginarium
+              Center" et bien d'autres. Venez les voir le 02 Mars 2023, autour
+              de boissons et de vos amis !
+            </p>
+            <a href="#" class="btn btn-primary" target="_blank"
+              >M'inscrire<img
+                src="/ressources/icons/externLink.svg"
+                alt=""
+                class="mb-1 ms-2"
+            /></a>
+          </div>
+        </div>
+
+        <h1 class="text-center fw-bold title">Les événements nationaux</h1>
         <div class="card text-bg-dark mb-2">
           <div class="card-header">
             Lolapalooza<span class="ms-3 badge bg-secondary"
@@ -57,31 +111,7 @@
             </a>
           </div>
         </div>
-        <div class="card text-bg-dark mb-2">
-          <div class="card-header">
-            Concert des <strong>"Rock'YesLife"</strong
-            ><span class="ms-3 badge bg-secondary">Evenement local</span>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">
-              Notre petit groupe local, les "Rock'YesLife" vous proposent un
-              concert dans le parc du chateau de l'imaginaire
-            </h5>
-            <p class="card-text">
-              Créés depuis trois ans, le groupe de notre ville "Imaginarius" se
-              propulse une nouvelle fois sur la scène locale pour joueur leurs
-              titres désormais connus de nous tous : "Rock'N'Life", "Imaginarium
-              Center" et bien d'autres. Venez les voir le 02 Mars 2023, autour
-              de boissons et de vos amis !
-            </p>
-            <a href="#" class="btn btn-primary" target="_blank"
-              >Lien vers Google maps<img
-                src="/ressources/icons/externLink.svg"
-                alt=""
-                class="mb-1 ms-2"
-            /></a>
-          </div>
-        </div>
+
         <div class="card text-bg-dark mb-2">
           <div class="card-header">
             Festival de Saint-Denis<span class="ms-3 badge bg-secondary"
