fix footer issues for mobile

--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -155,8 +155,8 @@
         <p>06 06 06 06 06</p>
         <p>mail@example.com</p>
         <p>12 rue de l'invention, Paris, 75011</p>
+        <p>Thomas Zadikian @ 2023</p>
       </div>
-      <p class="text-end">Thomas Zadikian @ 2023</p>
     </footer>
   </body>
 </html>
