--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -22,6 +22,8 @@
       </div>
     </header>
 
+    <!-- TODO : système qui renvoi vers les event nationaux / locaux -->
+
     <article class="article">
       <h1 class="text-center fw-bold title">Les événements locaux</h1>
       <div class="container">
