--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,5 +21,50 @@
         </div>
       </div>
     </header>
+
+    <div class="article">
+      <div class="container mt-5">
+        <h1>Contactez-nous</h1>
+        <form>
+          <div class="form-group">
+            <label for="nom">Nom complet</label>
+            <input
+              type="text"
+              class="form-control"
+              id="nom"
+              placeholder="Entrez votre nom"
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">Adresse e-mail</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              placeholder="Entrez votre adresse e-mail"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              class="form-control"
+              id="message"
+              rows="5"
+              placeholder="Entrez votre message"
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary mt-2">Envoyer</button>
+        </form>
+      </div>
+    </div>
+    <footer class="container-fluid">
+      <div class="text-center mt-3">
+        <h3>Nous contacter</h3>
+        <p>06 06 06 06 06</p>
+        <p>mail@example.com</p>
+        <p>12 rue de l'invention, Paris, 75011</p>
+        <p>Thomas Zadikian @ 2023</p>
+      </div>
+    </footer>
   </body>
 </html>
