optimize tags, style & add TODO

--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
   </head>
   <body>
     <header>
-      <div class="headerIMG">
-        <div class="container-fluid presentationContainer">
-          <h1 class="text-center fw-bold">Music'All</h1>
-          <a href="/pages/evenements.html"
-            ><button type="button" class="btn">Evénements</button></a
-          >
-          <a href="/pages/contact.html">
-            <button type="button" class="btn">Contact</button></a
-          >
-        </div>
+      <div class="container-fluid presentationContainer">
+        <h1 class="text-center fw-bold">Music'All</h1>
+        <a href="/pages/evenements.html" class="btn button">Evénements</a>
+        <a href="/pages/contact.html" class="btn button"> Contact</a>
       </div>
     </header>
 
-    <article class="article">
+    <!-- TODO : Remplir les balises ALT && balise meta -->
+
+    <main>
       <h1 class="text-center fw-bold title">Notre association</h1>
       <div class="icons">
         <div class="iconContainer">
@@ -62,7 +58,7 @@
           </p>
         </div>
       </div>
-    </article>
+    </main>
 
     <footer class="container-fluid">
       <div class="text-center mt-2">
