--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,17 +12,15 @@
       <div class="headerIMG">
         <div class="container-fluid presentationContainer">
           <h1 class="text-center fw-bold">Music'All</h1>
-          <a href="../index.html"
-            ><button type="button" class="btn">Accueil</button></a
-          >
-          <a href="evenements.html">
-            <button type="button" class="btn">Evénements</button></a
-          >
+          <a href="../index.html" class="btn button">Accueil</a>
+          <a href="evenements.html" class="btn button"> Evénements</a>
         </div>
       </div>
     </header>
 
-    <div class="article">
+    <!-- TODO : Remplir les balises ALT && balise meta -->
+
+    <main>
       <div class="container mt-5">
         <h1>Contactez-nous</h1>
         <form>
@@ -56,7 +54,7 @@
           <button type="submit" class="btn btn-primary mt-2">Envoyer</button>
         </form>
       </div>
-    </div>
+    </main>
     <footer class="container-fluid">
       <div class="text-center mt-3">
         <h3>Nous contacter</h3>
