--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -12,19 +12,16 @@
       <div class="headerIMG">
         <div class="container-fluid presentationContainer">
           <h1 class="text-center fw-bold">Music'All</h1>
-          <a href="../index.html"
-            ><button type="button" class="btn">Accueil</button></a
-          >
-          <a href="contact.html">
-            <button type="button" class="btn">Contact</button></a
-          >
+          <a href="../index.html" class="btn button">Accueil</a>
+          <a href="/pages/contact.html" class="btn button"> Contact</a>
         </div>
       </div>
     </header>
 
     <!-- TODO : système qui renvoi vers les event nationaux / locaux -->
+    <!-- TODO : Remplir les balises ALT && balise meta -->
 
-    <article class="article">
+    <main>
       <h1 class="text-center fw-bold title">Les événements locaux</h1>
       <div class="container">
         <div class="card text-bg-dark mb-2">
@@ -149,7 +146,7 @@
           </div>
         </div>
       </div>
-    </article>
+    </main>
 
     <footer class="container-fluid">
       <div class="text-center mt-3">
