optimizing meta tag & alt text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Page d'accueil de l'association Music'All"
+    />
     <link href="/SCSS/style.css" rel="stylesheet" />
     <title>Music'All</title>
   </head>
@@ -22,7 +25,10 @@
       <h1 class="text-center fw-bold title">Notre association</h1>
       <div class="icons">
         <div class="iconContainer">
-          <img src="/ressources/icons/disque.svg" alt="" />
+          <img
+            src="/ressources/icons/disque.svg"
+            alt="Icone de disque musical"
+          />
           <p>
             Bienvenue sur notre site associatif de musique ! Notre objectif est
             de rassembler des passionnés de musique de toutes les genres et de
@@ -31,7 +37,10 @@
           </p>
         </div>
         <div class="iconContainer">
-          <img src="/ressources/icons/fichierMusic.svg" alt="" />
+          <img
+            src="/ressources/icons/fichierMusic.svg"
+            alt="Icone de note de musique sur un fichier"
+          />
           <p>
             Notre site offre un visuel sur les événements à venir pour vous
             aider à découvrir de nouveaux artistes, participer à des événements
@@ -41,7 +50,7 @@
           </p>
         </div>
         <div class="iconContainer">
-          <img src="/ressources/icons/lecteur.svg" alt="" />
+          <img src="/ressources/icons/lecteur.svg" alt="Icone de lecteur MP3" />
           <p>
             En tant que site associatif, nous encourageons la participation
             active de nos membres pour aider à façonner le contenu et la
@@ -51,7 +60,10 @@
           </p>
         </div>
         <div class="iconContainer">
-          <img src="/ressources/icons/music.svg" alt="" />
+          <img
+            src="/ressources/icons/music.svg"
+            alt="icone de note de musique"
+          />
           <p>
             Rejoignez-nous pour partager votre passion pour la musique et
             découvrir tout ce que notre site associatif a à offrir !
