--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/SCSS/style.css" rel="stylesheet" />
-    <title>Music'All - Evénements</title>
+    <meta
+      name="description"
+      content="Contacter l'association Music'All en utilisant ce formulaire"
+    />
+    <title>Music'All - Contact</title>
   </head>
   <body>
     <header>
