--- a/pages/evenements.html
+++ b/pages/evenements.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Evénement musicaux nationaux proposé par l'association Music'All"
+    />
     <link href="/SCSS/style.css" rel="stylesheet" />
     <title>Music'All - Evénements</title>
   </head>
@@ -45,7 +48,7 @@
             <a href="#" class="btn btn-primary" target="_blank"
               >M'inscrire<img
                 src="/ressources/icons/externLink.svg"
-                alt=""
+                alt="Icone de lien externe"
                 class="mb-1 ms-2"
             /></a>
           </div>
@@ -71,7 +74,7 @@
             <a href="#" class="btn btn-primary" target="_blank"
               >M'inscrire<img
                 src="/ressources/icons/externLink.svg"
-                alt=""
+                alt="Icone de lien externe"
                 class="mb-1 ms-2"
             /></a>
           </div>
@@ -104,7 +107,7 @@
               target="_blank"
               >Lien vers l'OFFI (officiel des spectacles)<img
                 src="/ressources/icons/externLink.svg"
-                alt=""
+                alt="Icone de lien externe"
                 class="mb-1 ms-2"
               />
             </a>
@@ -140,7 +143,7 @@
               target="_blank"
               >Lien vers l'OFFI (officiel des spectacles)<img
                 src="/ressources/icons/externLink.svg"
-                alt=""
+                alt="Icone de lien externe"
                 class="mb-1 ms-2"
             /></a>
           </div>
