add mention for example site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="container-fluid presentationContainer">
-        <h1 class="text-center fw-bold">Music'All</h1>
+        <h1 class="text-center fw-bold">Music'All (Site vitrine d'exemple)</h1>
         <a href="/pages/evenements.html" class="btn button">Evénements</a>
         <a href="/pages/contact.html" class="btn button"> Contact</a>
       </div>
